--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -14,6 +14,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   <link rel="stylesheet" href="./styles/master.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <main>
