Added styles for the second container, results summary

--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -21,32 +21,32 @@
     <div class="result">
       <h4>Your Result</h4>
       <span class="score-overall">
-        <span>76</span>
+        <span class="user-grade">76</span>
         of 100
       </span>
-      <span class="results-status">Great</span>
+      <p class="results-status">Great</p>
       <p class="results-comment">You scored higher than 65% of the people who have taken these tests.</p>
     </div>
     <div class="result-summary">
       <h4>Summary</h4>
       <div class="reaction component">
         <img src="./assets/images/icon-reaction.svg" />
-        <span class="component-text">Reaction</span>
+        <p><span class="component-text">Reaction</span></p>
         <span class="component-grade"><strong>80</strong> / 100</span>
       </div>
       <div class="memory component">
         <img src="./assets/images/icon-memory.svg" />
-        <span class="component-text">Memory</span>
+        <p><span class="component-text">Memory</span></p>
         <span class="component-grade"><strong>92</strong> / 100</span>
       </div>
       <div class="visual component">
         <img src="./assets/images/icon-verbal.svg" />
-        <span class="component-text">Verbal</span>
+        <p><span class="component-text">Verbal</span></p>
         <span class="component-grade"><strong>61</strong> / 100</span>
       </div>
       <div class="verbal component">
         <img src="./assets/images/icon-visual.svg" />
-        <span class="component-text">Visual</span>
+        <p><span class="component-text">Visual</span></p>
         <span class="component-grade"><strong>72</strong> / 100</span>
       </div>
       <button>Continue</button>
