--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <div class="result">
-      <h4>Your Result</h4>
+      <h1>Your Result</h1>
       <span class="score-overall">
         <span class="user-grade">76</span>
         of 100
@@ -23,24 +23,24 @@
       <p class="results-comment">You scored higher than 65% of the people who have taken these tests.</p>
     </div>
     <div class="result-summary">
-      <h4>Summary</h4>
+      <h1>Summary</h1>
       <div class="reaction component">
-        <img src="./assets/images/icon-reaction.svg" />
+        <img src="./assets/images/icon-reaction.svg" alt="An image of thunder icon" />
         <p><span class="component-text">Reaction</span></p>
         <span class="component-grade"><strong>80</strong> / 100</span>
       </div>
       <div class="memory component">
-        <img src="./assets/images/icon-memory.svg" />
+        <img src="./assets/images/icon-memory.svg" alt="An image of a brain" />
         <p><span class="component-text">Memory</span></p>
         <span class="component-grade"><strong>92</strong> / 100</span>
       </div>
       <div class="visual component">
-        <img src="./assets/images/icon-verbal.svg" />
+        <img src="./assets/images/icon-verbal.svg" alt="An image of a circle with a triangle at its bottom left corner" />
         <p><span class="component-text">Verbal</span></p>
         <span class="component-grade"><strong>61</strong> / 100</span>
       </div>
       <div class="verbal component">
-        <img src="./assets/images/icon-visual.svg" />
+        <img src="./assets/images/icon-visual.svg" alt="An image of an eye" />
         <p><span class="component-text">Visual</span></p>
         <span class="component-grade"><strong>72</strong> / 100</span>
       </div>
